--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <!--"What You Do: section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary border">What You Do</h2>
+            <h2 class="section-title secondary-border">What You Do</h2>
             <div>
                 <!--Insert Img Element-->
                 <img src="./assets/images/step-1.svg" alt="" />
@@ -104,8 +104,44 @@
         </section>
         
         <!--"Your Trainers" Section-->
-        <section>
-            <h2>Your Trainers</h2>
+
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border"> Meet the Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+            </article>
+
+        <!--Second Trainer Section-->
+
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ullam facere quis vitae fugiat esse provident nisi repellendus excepturi quaerat minus, quod quas molestiae voluptatum, nemo, quam commodi quisquam. Aspernatur?</p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling after working out" />
+            </article>
+
+        <!--Third Trainer Section-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry the "Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae explicabo ratione tempore? Nemo, quia eum error labore nisi, laborum, magnam animi aspernatur deleniti cum unde consequuntur! At, a! Quas, saepe!
+                    </p>
+                </div>
+            </article>
+
         </section>
         
         <!--"Reach Out Section"-->
