style contact info

--- a/index.html
+++ b/index.html
@@ -147,12 +147,10 @@
         
         <!--"Reach Out Section"-->
 
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
                 <div class="contact-info">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.7708181720095!2d-79.06967874849045!3d43.860578679012335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4df742af076d9%3A0x3b8ee5388d83305b!2s32%20Kemp%20Dr%2C%20Ajax%2C%20ON%20L1T%204A7!5e0!3m2!1sen!2sca!4v1606870264742!5m2!1sen!2sca" 
-                    width="400" 
-                    height="400" 
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.7708181720095!2d-79.06967874849045!3d43.860578679012335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4df742af076d9%3A0x3b8ee5388d83305b!2s32%20Kemp%20Dr%2C%20Ajax%2C%20ON%20L1T%204A7!5e0!3m2!1sen!2sca!4v1606870264742!5m2!1sen!2sca"
                     frameborder="0" 
                     style="border:0;" 
                     allowfullscreen="">
@@ -176,7 +174,6 @@
 
                 </div>
         </section>
-
 
 
 
