--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
         <!--hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, illum quae sapiente veniam sed voluptatum earum quaerat impedit? Facere tenetur impedit cupiditate et neque delectus molestiae similique aut tempore error. </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
