--- a/index.html
+++ b/index.html
@@ -72,15 +72,21 @@
 
         <!--"What We Do" section-->
         <section id="what-we-do" class="intro">
+            <div class= "flex-row">
             <h2 class="section-title primary-border">What We Do</h2>
-        <p>
+            </div>
+            <div class="flex-row">
+                <p>
             butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-        </p>
+                </p>
+            </div>
         </section>
 
         <!--"What You Do: section-->
         <section id="what-you-do" class="steps">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
             <div>
                 <!--Insert Img Element-->
                 <img src="./assets/images/step-1.svg" alt="" />
@@ -110,9 +116,9 @@
         <!--"Your Trainers" Section-->
 
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border"> Meet the Trainers</h2>
-           
-           
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -152,7 +158,9 @@
         <!--"Reach Out Section"-->
 
         <section id="reach-out" class="contact">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+             </div>
                 <div class="contact-info">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2876.7708181720095!2d-79.06967874849045!3d43.860578679012335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4df742af076d9%3A0x3b8ee5388d83305b!2s32%20Kemp%20Dr%2C%20Ajax%2C%20ON%20L1T%204A7!5e0!3m2!1sen!2sca!4v1606870264742!5m2!1sen!2sca"
                     frameborder="0" 
