add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -145,15 +145,20 @@
         
         <!--"Your Trainers" Section-->
 
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <div class="flex-row">
             <h2 class="section-title primary-border"> Meet the Trainers</h2>
             </div>
+
+<div class="trainers">
+
+            <!--First Trainer-->
+
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
@@ -164,25 +169,28 @@
         <!--Second Trainer Section-->
 
             <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling after working out" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ullam facere quis vitae fugiat esse provident nisi repellendus excepturi quaerat minus, quod quas molestiae voluptatum, nemo, quam commodi quisquam. Aspernatur?</p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling after working out" />
             </article>
 
         <!--Third Trainer Section-->
             <article class="trainer">
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry the "Headband" Smith</h3>
-                    <h4>Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry the "Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae explicabo ratione tempore? Nemo, quia eum error labore nisi, laborum, magnam animi aspernatur deleniti cum unde consequuntur! At, a! Quas, saepe!
                     </p>
                 </div>
             </article>
+
+</div>
+
         </section>
         
         <!--"Reach Out Section"-->
